Fixed overlapping navbar

--- a/styling/about.css
+++ b/styling/about.css
@@ -2,11 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 /* ABOUT PAGE STYLING */
 
-.navbar-nav {
-    /* position: absolute;
-    top: 8px;
-    left: 16px; */
-    font-size: 18px;
+/* .navbar-nav {
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -14,6 +10,13 @@
     position: fixed;
     top: 0;
     width: 100%;
+} */
+
+.nav {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 18px;
 }
 
 #block {
